[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/misc/settings/SettingsGUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/m5x7/TextTheme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/m5x7/BigTextTheme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/m5x7/SmallTextTheme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )

[node name="Settings" type="Node"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Settings" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -451.5
margin_right = 451.5
margin_bottom = 457.0

[node name="PanelName" type="Label" parent="Panel/Settings"]
margin_right = 903.0
margin_bottom = 51.0
theme = ExtResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="VideoSettings" type="VBoxContainer" parent="Panel/Settings"]
margin_top = 55.0
margin_right = 903.0
margin_bottom = 287.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="Panel/Settings/VideoSettings"]
margin_right = 903.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "S_C_VIDEO"
align = 1
valign = 1

[node name="ScreenResolution" type="Label" parent="Panel/Settings/VideoSettings"]
margin_top = 42.0
margin_right = 903.0
margin_bottom = 80.0
theme = ExtResource( 2 )
text = "S_RES"
align = 1
valign = 1

[node name="Resolutions" type="HBoxContainer" parent="Panel/Settings/VideoSettings"]
margin_top = 84.0
margin_right = 903.0
margin_bottom = 114.0
theme = ExtResource( 4 )
custom_constants/separation = 25
alignment = 1

[node name="FullHD" type="Button" parent="Panel/Settings/VideoSettings/Resolutions"]
margin_left = 210.0
margin_right = 318.0
margin_bottom = 30.0
text = "1920x1080"

[node name="1366" type="Button" parent="Panel/Settings/VideoSettings/Resolutions"]
margin_left = 343.0
margin_right = 439.0
margin_bottom = 30.0
text = "1366x768"

[node name="1280" type="Button" parent="Panel/Settings/VideoSettings/Resolutions"]
margin_left = 464.0
margin_right = 572.0
margin_bottom = 30.0
text = "1280x1024"

[node name="1024" type="Button" parent="Panel/Settings/VideoSettings/Resolutions"]
margin_left = 597.0
margin_right = 693.0
margin_bottom = 30.0
text = "1024x768"

[node name="Center" type="CenterContainer" parent="Panel/Settings/VideoSettings"]
margin_top = 118.0
margin_right = 903.0
margin_bottom = 156.0

[node name="FullscreenCheckButton" type="CheckButton" parent="Panel/Settings/VideoSettings/Center"]
margin_left = 309.0
margin_right = 593.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "S_FULLSCREEN"
align = 1
icon_align = 1

[node name="ColorOptions" type="Label" parent="Panel/Settings/VideoSettings"]
margin_top = 160.0
margin_right = 903.0
margin_bottom = 198.0
theme = ExtResource( 2 )
text = "S_COLORS"
align = 1
valign = 1

[node name="ColorFilters" type="HBoxContainer" parent="Panel/Settings/VideoSettings"]
margin_top = 202.0
margin_right = 903.0
margin_bottom = 232.0
theme = ExtResource( 4 )
custom_constants/separation = 15
alignment = 1

[node name="Off" type="Button" parent="Panel/Settings/VideoSettings/ColorFilters"]
margin_right = 144.0
margin_bottom = 30.0
text = "S_COLORS_OFF"

[node name="Protanopia" type="Button" parent="Panel/Settings/VideoSettings/ColorFilters"]
margin_left = 159.0
margin_right = 279.0
margin_bottom = 30.0
text = "S_COLORS_P"

[node name="Deuteranopia" type="Button" parent="Panel/Settings/VideoSettings/ColorFilters"]
margin_left = 294.0
margin_right = 414.0
margin_bottom = 30.0
text = "S_COLORS_D"

[node name="Tritanopia" type="Button" parent="Panel/Settings/VideoSettings/ColorFilters"]
margin_left = 429.0
margin_right = 549.0
margin_bottom = 30.0
text = "S_COLORS_T"

[node name="Retro" type="Button" parent="Panel/Settings/VideoSettings/ColorFilters"]
margin_left = 564.0
margin_right = 732.0
margin_bottom = 30.0
text = "S_COLORS_RETRO"

[node name="Grayscale" type="Button" parent="Panel/Settings/VideoSettings/ColorFilters"]
margin_left = 747.0
margin_right = 903.0
margin_bottom = 30.0
text = "S_COLORS_GRAY"

[node name="AudioSettings" type="VBoxContainer" parent="Panel/Settings"]
margin_top = 291.0
margin_right = 903.0
margin_bottom = 329.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="Panel/Settings/AudioSettings"]
margin_right = 903.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "S_C_AUDIO"
align = 1
valign = 1

[node name="OtherSettings" type="VBoxContainer" parent="Panel/Settings"]
margin_top = 333.0
margin_right = 903.0
margin_bottom = 397.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="Panel/Settings/OtherSettings"]
margin_right = 903.0
margin_bottom = 30.0
theme = ExtResource( 4 )
text = "S_LANG"
align = 1
valign = 1

[node name="Langs" type="HBoxContainer" parent="Panel/Settings/OtherSettings"]
margin_top = 34.0
margin_right = 903.0
margin_bottom = 64.0
theme = ExtResource( 4 )
custom_constants/separation = 25
alignment = 1

[node name="English" type="Button" parent="Panel/Settings/OtherSettings/Langs"]
margin_left = 264.0
margin_right = 372.0
margin_bottom = 30.0
text = "S_LANG_EN"

[node name="Polish" type="Button" parent="Panel/Settings/OtherSettings/Langs"]
margin_left = 397.0
margin_right = 505.0
margin_bottom = 30.0
text = "S_LANG_PL"

[node name="German" type="Button" parent="Panel/Settings/OtherSettings/Langs"]
margin_left = 530.0
margin_right = 638.0
margin_bottom = 30.0
text = "S_LANG_DE"

[node name="SaveExitButtons" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 401.0
margin_right = 903.0
margin_bottom = 452.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="SaveExitButton" type="Button" parent="Panel/Settings/SaveExitButtons"]
margin_left = 179.0
margin_right = 419.0
margin_bottom = 51.0
theme = ExtResource( 3 )
text = "S_SAVE_SAE"

[node name="ExitButton" type="Button" parent="Panel/Settings/SaveExitButtons"]
margin_left = 459.0
margin_right = 723.0
margin_bottom = 51.0
theme = ExtResource( 3 )
text = "S_SAVE_EXIT"

[connection signal="pressed" from="Panel/Settings/VideoSettings/Resolutions/FullHD" to="." method="_on_1920_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/Resolutions/1366" to="." method="_on_1366_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/Resolutions/1280" to="." method="_on_1280_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/Resolutions/1024" to="." method="_on_1024_pressed"]
[connection signal="toggled" from="Panel/Settings/VideoSettings/Center/FullscreenCheckButton" to="." method="_on_FullscreenCheckButton_toggled"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/ColorFilters/Off" to="." method="_on_ColorsOff_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/ColorFilters/Protanopia" to="." method="_on_Protanopia_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/ColorFilters/Deuteranopia" to="." method="_on_Deuteranopia_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/ColorFilters/Tritanopia" to="." method="_on_Tritanopia_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/ColorFilters/Retro" to="." method="_on_Retro_pressed"]
[connection signal="pressed" from="Panel/Settings/VideoSettings/ColorFilters/Grayscale" to="." method="_on_Grayscale_pressed"]
[connection signal="pressed" from="Panel/Settings/OtherSettings/Langs/English" to="." method="_on_English_pressed"]
[connection signal="pressed" from="Panel/Settings/OtherSettings/Langs/Polish" to="." method="_on_Polish_pressed"]
[connection signal="pressed" from="Panel/Settings/OtherSettings/Langs/German" to="." method="_on_German_pressed"]
[connection signal="pressed" from="Panel/Settings/SaveExitButtons/SaveExitButton" to="." method="_on_SaveExitButton_pressed"]
[connection signal="pressed" from="Panel/Settings/SaveExitButtons/ExitButton" to="." method="_on_ExitButton_pressed"]
